<resources>
    <string name="app_name">Space Cadet Pinball</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="plunger">Plunger</string>
    <string name="tilt">Tilt</string>
    <string name="reset">New game</string>
    <string name="highscore">High Score</string>
    <string name="newhighscore">New High Score: %d! Congratulations!</string>
    <string name="balls">Ball %d</string>
    <string name="remainingballs">Remaining balls %d</string>
    <string name="remainingballssettings">Remaining balls indicator</string>
    <string name="tiltbuttons">Tilt buttons</string>
    <string name="username">Username</string>
    <string name="credits">3D Pinball Table was created for Microsoft by Maxis.\nCopyright © 1995 Maxis.\n\nReverse engineering by: k4zmu2a\nOriginal Android port by: Iscle\nCurrent Android port by: fexed, th3vanger</string>
    <string name="restartprompt">Long tap to restart the game</string>
    <string name="volume">Volume</string>
    <string name="customfonts">Custom fonts</string>
    <string name="plungerpopup">Plunger popup</string>
    <string name="plungerhint">Keep pressed on the screen to throw the ball</string>
    <string name="goto_googleplay"><u><a hred="https://play.google.com/store/apps/dev?id=6687966458279653723">Check out my other apps!</a></u></string>
    <string name="goto_github"><u><a hred="https://github.com/fexed/Pinball-on-Android/releases">Check out the latest version</a></u></string>
    <string name="cheat_title">Cheats</string>
    <string name="cheat_disclaimer">Activate before launching your first ball (note: some cheats are still not working)</string>
    <string name="cheat_gmax">gmax - Enables the Gravity Well</string>
    <string name="cheat_1max">1max - Extra ball</string>
    <string name="cheat_bmax">bmax - Unlimited balls</string>
    <string name="cheat_rmax">rmax - Increases your rank</string>
    <string name="cheat_omax">omax - Play in Red</string>
    <string name="cheat_lmax">lmax - Increase the field multiplier</string>
    <string name="cheat_notused">No cheats used</string>
    <string name="cheat_used">Cheats used!</string>
    <string name="cheat_hiddentest">hidden test - Debug mode</string>
    <string name="loading">Loading…</string>
    <string name="leaderboard">Online Leaderboard</string>
    <string name="cheatleaderboard">Cheat Leaderboard</string>
    <string name="leaderboard_current">Leaderboard (Current: %s)</string>
    <string name="cheatleaderboard_current">Cheat leaderboard (Current: %s)</string>
    <string name="Settings">Settings</string>
    <string name="infos">Informations</string>
    <string name="howtoplay">Tap anywhere on the screen to use the plunger or the two levers, and aim for the high score!</string>
    <string name="scoreupload_ok">Score uploaded for %s</string>
    <string name="scoreupload_err">Error %s while uploading score</string>
    <string name="current_ver">Current version</string>
    <string name="nextpage">Next</string>
    <string name="prevpage">Prev</string>
    <string name="rankerrortitle">Error</string>
    <string name="rankerrormsg">An error occurred while downloading the ranking.\n\n%s</string>
    <string name="rankerrorretry">Server timeout, please retry.</string>
    <string name="newvers">Version %s is available on GitHub!</string>
    <string name="newversdl">Version %s is available: tap here to download</string>
    <string name="nonewvers">You are playing the latest version</string>
</resources>